--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ jobs:
     name: Lint
     runs-on: ubuntu-20.04
     steps:
+      - name: Set up Go 1.17
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -21,6 +26,11 @@ jobs:
     name: Generate & Diff
     runs-on: ubuntu-20.04
     steps:
+      - name: Set up Go 1.17
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
